[workspace]
members = ["xtask"]
default-members = ["."]
resolver = "2"

[package]
name = "casper-devnet"
version = "0.5.1"
edition = "2024"
license = "Apache-2.0"
readme = "README.md"
description = "Launcher for local Casper Network development networks."
repository = "https://github.com/veles-labs/casper-devnet-launcher"
homepage = "http://veleslabs.xyz"
documentation = "https://docs.rs/casper-devnet"

[dependencies]
anyhow = "1.0"
backoff = "0.4"
bip32 = "0.5"
blake2 = "0.10"
casper-types = { version = "6.0.1", features = ["std"] }
clap = { version = "4.5", features = ["derive"] }
directories = "6.0.0"
flate2 = "1.0"
futures = "0.3"
nix = { version = "0.28", default-features = false, features = ["signal"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = { version = "1.0", features = ["serde"] }
sha2 = "0.10"
spinners = "4.1"
tar = "0.4"
toml = "0.8"
tokio = { version = "1.48.0", features = ["fs", "macros", "process", "rt-multi-thread", "signal", "time"] }
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
tracing = "0.1"
veles-casper-rust-sdk = "0.1.0"
indicatif = "0.18.3"
